vish changes - spacing fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1192,7 +1192,6 @@ a:hover {
 
 .item {
   border: none;
-  margin-bottom: 30px;
 }
 
 .item .item-wrap {
